Fixed an issue with horizontal scrolling for events in My Profile. Uncommented 2 divs

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -378,7 +378,6 @@ select~label {
     height: 100%;
     width: 100%;
     overflow-x: scroll;
-    scrollbar-color: var(--nav-bar);
 }
 
 #dCards {
@@ -393,7 +392,6 @@ select~label {
     height: 100%;
     width: 100%;
     overflow-x: scroll;
-    scrollbar-color: var(--nav-bar);
 }
 
 .eCards {
